ajustando teste de rotas para ajudar clayton

--- a/backend/Makefile.example
+++ b/backend/Makefile.example
@@ -11,3 +11,6 @@ export JWT_SECRET = SecretJWTKeyCodeNation
 
 run:
 	go run main.go
+
+testRoutes:	
+	/usr/local/go/bin/go test -timeout 30s github.com/codenation-dev/squad-6-aceleradev-fs-online-1/backend/routes -coverprofile=/tmp/vscode-gomiv2aW/go-code-cover
