--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,12 @@ DB_PORT=5432
 DB_USER=buati_user
 DB_DATABASE=buati_dev
 DB_PASSWORD=secret
+
+CONFIG_MIN_SALARY_REGISTER_PAYMENT=20000
+
+EMAIL_SMTP_SERVER=<smtp_server> : for Gmail it's smtp.gmail.com
+EMAIL_SMTP_PORT=<smtp_port> : for Gmail it's 465
+EMAIL_SMTP_USER=<smtp user> : usually the same than HERMES_SENDER_EMAIL
+EMAIL_SMTP_PASSWORD=<recipients emails>: split by commas like myadress@test.com,somethingelse@gmail.com
+EMAIL_SENDER_EMAIL=<your_sender_email>
+EMAIL_SENDER_IDENTITY=<the sender name>
