--- a/backend/.envexample
+++ b/backend/.envexample
@@ -1,11 +1,11 @@
 
 JWT_SECRET=SecretJWTKeyCodeNation
 
-DB_HOST=db
+DB_HOST=172.18.0.2
 DB_PORT=5432
-DB_USER=buati_user
-DB_DATABASE=buati_dev
-DB_PASSWORD=secret
+DB_USER=postgres
+DB_DATABASE=codenation
+DB_PASSWORD=cl123456
 
 CONFIG_MIN_SALARY_REGISTER_PAYMENT=20000
 
