--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,8 @@ services:
     expose:
       - 4000
     volumes:
-      - ./backend:/usr/src/app
-    working_dir: /usr/src/app
+      - ./backend:/go/src/github.com/codenation-dev/squad-6-aceleradev-fs-online-1/backend
+    working_dir: /go/src/github.com/codenation-dev/squad-6-aceleradev-fs-online-1/backend
     environment:
       - VIRTUAL_HOST=api.buati.local
     networks:
